<resources>
    <string name="app_name">12_Lists</string>
    <string name="max_speed">Максимальная скорость: </string>
    <string name="door_count">Количество дверей: </string>
    <string name="engine_count">Количество двигателей: </string>
    <string name="displacement">Водоизмещение: </string>
    <string name="transport_type">Вид транспорта: </string>
    <string name="transport_name">Название транспортного средства: </string>
    <string name="list_is_empty">Список транспорта пуст</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="name_is_empty">Имя не должно быть пустым</string>
    <string name="transport_type_is_empty">Выберите вид транспорта</string>
    <string name="max_speed_is_empty">Укажите максимальную скорость</string>
    <string name="last_param_is_empty">Проверьте последнее поле</string>
    <string name="verticallist">Vertical List</string>
    <string name="horizontallist">Horizontal List</string>
    <string name="gridlist">Grid List</string>
    <string name="staggered_grid_list">Staggered Grid List</string>
    <string name="earthborn">Наземный</string>
    <string name="airborn">Воздушный</string>
    <string name="waterborn">Водный</string>
    <string name="item_deleted">Элемент удален</string>
    <string name="details_title">Детальная информация для ТС с ID %d</string>
    <string name="max_speed_placeholder">Максимальная скорость: %d</string>
    <string name="door_count_placeholder">Количество дверей: %d</string>
    <string name="engine_count_placeholder">Количество двигателей: %d</string>
    <string name="displacement_placeholder">Водоизмещение: %d</string>
    <string name="transport_type_placeholder">Вид транспорта: %s</string>
    <string name="transport_name_placeholder">Название ТС: %s</string>
    <string name="aircraft_avatar">Aircraft Avatar</string>
    <string name="car_avatar">Car Avatar</string>
    <string name="ship_avatar">Ship Avatar</string>

</resources>
