<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/avatarIV"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/ship_avatar"
        android:padding="10dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/maxSpeedTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/avatarIV"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/maxSpeedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_speed"
        app:layout_constraintBottom_toTopOf="@+id/displacementTV"
        app:layout_constraintStart_toEndOf="@+id/avatarIV"
        app:layout_constraintTop_toBottomOf="@+id/nameTV" />

    <TextView
        android:id="@+id/displacementTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displacement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatarIV"
        app:layout_constraintTop_toBottomOf="@+id/maxSpeedTV" />


</androidx.constraintlayout.widget.ConstraintLayout>